chore: add demo docs, run script, and include target-apps buggy-vibe source (exclude logs/screenshots)

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ GOOGLE_API_KEY=your-google-api-key-here
 
 # Note: Each key should be from a different Google Cloud project
 # to get separate quotas
+
+# Target URL for security testing
+# This is the website that the QA agent will scan for vulnerabilities
+TARGET_URL=http://localhost:5173
