--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ python-dotenv>=1.0.0
 # Google Generative AI
 google-generativeai>=0.3.0
 
+# FastAPI for dashboard backend
+fastapi>=0.104.0
+uvicorn>=0.24.0
+python-multipart>=0.0.6
+
